# tiktok-system-news

./: .env.example  .gitignore  Dockerfile  Dockerfile.novnc  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  dreamface-auth.json  openapi_check.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_09_1441-07baf7b25a02_initial_models.py  2026_04_09_1747-2985708e8446_add_background_audios.py  2026_04_09_1748-0092ce9e0ba3_add_background_audios.py  2026_04_10_1632-c97c8e829460_add_sound_effects_table.py
backend/app/: config.py  database.py  main.py
backend/app/api/: audios.py  connections.py  logs.py  pipeline.py  prompts.py  references.py  router.py  settings.py  sfx.py  storage.py  videos.py  voices.py  websocket.py
backend/app/auth/: dependencies.py  jwt_handler.py  router.py
backend/app/automation/: account_rotator.py  browser_pool.py  dreamface.py  grok.py
backend/app/models/: __init__.py  background_audio.py  connection_account.py  log_entry.py  reference.py  sfx.py  system_prompt.py  system_settings.py  user.py  video.py
backend/app/pipeline/: base.py  registry.py
backend/app/processing/: asset_manager.py  ffmpeg.py
backend/app/queue/: celery_app.py  progress.py  tasks.py
backend/app/schemas/: auth.py  connection.py  log.py  pipeline.py  prompt.py  reference.py  settings.py  video.py
backend/app/seeds/: prompts.py
backend/app/services/: genaipro.py  minio_client.py  openrouter.py  scene_director.py  (+2 more)
backend/scripts/: update_diretor_cena.py
(+81 files in other folders)
